Defined userDelegate class methods